--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "js-starbound": "^2.0.3",
+    "lodash": "^4.17.15",
+    "vue": "^2.6.11",
+    "vue-json-editor": "^1.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
